# ml_playground

./: .gitignore  .pre-commit-config.yaml  Modelling_Classification.ipynb  Modelling_Regression.ipynb  data_prep.ipynb  nb_ml.ipynb  nb_ml_regression.ipynb  pyproject.toml
