[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "kaleido==0.2.1",
    "lightgbm>=4.6.0",
    "pycaret>=3.3.2",
    "scikit-learn>=1.4.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]
